add caterer role and qr app functionality
