# backend/src/main/kotlin/de/lambda9/ready2race/backend/app/auth/entity/Privilege.kt
@@ -21,7 +21,8 @@ sealed class Privilege(
         INVOICE,
         APP_EVENT_REQUIREMENT,
         APP_QR_MANAGEMENT,
-        APP_COMPETITION_CHECK
+        APP_COMPETITION_CHECK,
+        APP_CATERER
     }
 
     enum class Scope(val level: Int) {
@@ -61,6 +62,7 @@ sealed class Privilege(
     data object UpdateAppEventRequirementGlobal: Privilege(Action.UPDATE, Resource.APP_EVENT_REQUIREMENT, Scope.GLOBAL)
     data object UpdateAppQrManagementGlobal: Privilege(Action.UPDATE, Resource.APP_QR_MANAGEMENT, Scope.GLOBAL)
     data object UpdateAppCompetitionCheckGlobal: Privilege(Action.UPDATE, Resource.APP_COMPETITION_CHECK, Scope.GLOBAL)
+    data object UpdateAppCatererGlobal: Privilege(Action.UPDATE, Resource.APP_CATERER, Scope.GLOBAL)
 
     data object CreateInvoiceGlobal: Privilege(Action.CREATE, Resource.INVOICE, Scope.GLOBAL)
     data object ReadInvoiceGlobal: Privilege(Action.READ, Resource.INVOICE, Scope.GLOBAL)
